reports/tp-output-pack-20260208-132920/03-compileall.out
./.venv/lib/python3.13/site-packages/docopt.py:165: SyntaxWarning: invalid escape sequence '\S'
  name = re.findall('(<\S*?>)', source)[0]
./.venv/lib/python3.13/site-packages/docopt.py:166: SyntaxWarning: invalid escape sequence '\['
  value = re.findall('\[default: (.*)\]', source, flags=re.I)
./.venv/lib/python3.13/site-packages/docopt.py:207: SyntaxWarning: invalid escape sequence '\['
  matched = re.findall('\[default: (.*)\]', description, flags=re.I)
./.venv/lib/python3.13/site-packages/docopt.py:456: SyntaxWarning: invalid escape sequence '\S'
  split = re.split('\n *(<\S+?>|-\S+?)', doc)[1:]
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:662: SyntaxWarning: invalid escape sequence '\('
  '(', '\(').replace(
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:663: SyntaxWarning: invalid escape sequence '\)'
  ')', '\)')
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1349: SyntaxWarning: invalid escape sequence '\]'
  ''.join(ATOM_ENDS).replace('\\','\\\\').replace(']','\]'))).match
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1352: SyntaxWarning: invalid escape sequence '\]'
  ''.join(TOKEN_ENDS).replace('\\','\\\\').replace(']','\]'))).match
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1354: SyntaxWarning: invalid escape sequence '\]'
  ''.join(ATTRIBUTE_ENDS).replace('\\','\\\\').replace(']','\]'))).match
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1357: SyntaxWarning: invalid escape sequence '\]'
  '\\','\\\\').replace(']','\]'))).match
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1541: SyntaxWarning: invalid escape sequence '\ '
  """ctext = <printable ascii except \ ( )>
./.venv/lib/python3.13/site-packages/future/backports/email/_header_value_parser.py:1876: SyntaxWarning: invalid escape sequence '\ '
  """ dtext = <printable ascii except \ [ ]> / obs-dtext
./.venv/lib/python3.13/site-packages/future/backports/email/feedparser.py:37: SyntaxWarning: invalid escape sequence '\Z'
  NLCRE_eol = re.compile('(\r\n|\r|\n)\Z')
./.venv/lib/python3.13/site-packages/future/backports/email/utils.py:68: SyntaxWarning: invalid escape sequence '\A'
  '([^\ud800-\udbff]|\A)[\udc00-\udfff]([^\udc00-\udfff]|\Z)').search
./.venv/lib/python3.13/site-packages/future/backports/html/parser.py:31: SyntaxWarning: invalid escape sequence '\s'
  tagfind = re.compile('([a-zA-Z][-.a-zA-Z0-9:_]*)(?:\s|/(?!>))*')
./.venv/lib/python3.13/site-packages/future/backports/html/parser.py:79: SyntaxWarning: invalid escape sequence '\s'
  endtagfind = re.compile('</\s*([a-zA-Z][-.a-zA-Z0-9:_]*)\s*>')
./.venv/lib/python3.13/site-packages/future/backports/http/client.py:29: SyntaxWarning: invalid escape sequence '\_'
  |\____________________
./.venv/lib/python3.13/site-packages/future/backports/http/cookiejar.py:212: SyntaxWarning: invalid escape sequence '\d'
  "(\d\d\d\d) (\d\d):(\d\d):(\d\d) GMT$", re.ASCII)
./.venv/lib/python3.13/site-packages/future/backports/http/cookiejar.py:294: SyntaxWarning: invalid escape sequence '\d'
  (\d{4})              # year
./.venv/lib/python3.13/site-packages/future/backports/http/cookiejar.py:429: SyntaxWarning: invalid escape sequence '\s'
  non_junk, nr_junk_chars = re.subn("^[=\s;]*", "", text)
./.venv/lib/python3.13/site-packages/future/backports/test/support.py:1945: SyntaxWarning: invalid escape sequence '\d'
  m = re.match("2.6.(\d{1,2})", kernel_version)
./.venv/lib/python3.13/site-packages/future/backports/urllib/parse.py:957: SyntaxWarning: invalid escape sequence '\?'
  _queryprog = re.compile('^(.*)\?([^?]*)$')
./quarantine/2026-02-04/doc_processor/registries.py:276: SyntaxWarning: invalid escape sequence '\s'
  - Regex seeds: ^#{1,3}\s*(Epic|Feature|Capability)\b
*** Error compiling './.venv/lib/python3.13/site-packages/olefile/olefile2.py'...
  File "./.venv/lib/python3.13/site-packages/olefile/olefile2.py", line 277
    MAXREGSECT = 0xFFFFFFFAL; # maximum SECT
                          ^
SyntaxError: invalid hexadecimal literal

*** Error compiling './SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic/genetic_agent.py'...
  File "./SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic/genetic_agent.py", line 7
    from ...services.genetic-agent.core.agent import BaseAgent
                            ^
SyntaxError: invalid syntax

*** Error compiling './SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic_agent/genetic/genetic_agent.py'...
  File "./SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic_agent/genetic/genetic_agent.py", line 7
    from ....services.genetic-agent.core.agent import BaseAgent
                             ^
SyntaxError: invalid syntax

*** Error compiling './SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic_agent/vanilla/vanilla_agent.py'...
  File "./SYSTEM_ARCHIVE/genetic_agent_root_duplicate/genetic_agent/vanilla/vanilla_agent.py", line 8
    from ....services.genetic-agent.core.agent import BaseAgent
                             ^
SyntaxError: invalid syntax

*** Error compiling './SYSTEM_ARCHIVE/genetic_agent_root_duplicate/vanilla/vanilla_agent.py'...
  File "./SYSTEM_ARCHIVE/genetic_agent_root_duplicate/vanilla/vanilla_agent.py", line 7
    from ...services.genetic-agent.core.agent import BaseAgent
                            ^
SyntaxError: invalid syntax

